--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="next">Next</string>
     <string name="password">Password</string>
     <string name="name">Name</string>
+    <string name="sign_up"><u>sign_up</u></string>
 </resources>
