--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="sign_up"><u>sign_up</u></string>
     <string name="drawerOpen" />
     <string name="drawerClose" />
+    <string name="weather_api">618e3a096dcd96b86ffa64b35ef140e1</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
