Event details activity done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="at">At</string>
     <string name="attending">Attending</string>
     <string name="exit_toast" translatable="false">Press again to exit!</string>
+    <string name="description"><u>Description</u></string>
 </resources>
