--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="taka">৳</string>
     <string name="group_name">Group Name</string>
     <string name="total_cost">Total Cost</string>
+    <string name="update_your_event">Update Your Event</string>
+    <string name="update">Update</string>
 </resources>
