--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="drawerOpen" />
     <string name="drawerClose" />
     <string name="weather_api">618e3a096dcd96b86ffa64b35ef140e1</string>
-    <string name="place_api">AIzaSyBPVgPRfL3SoIscOmdQM9lrH4DiJh5GOss</string>
+    <string name="place_api">AIzaSyDJTrhiPeisMKhV1SK7fFv4IF7u_Fpe8FA</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -36,6 +36,8 @@
     <string name="start_date">Start Date</string>
     <string name="select_tourism_places">Select tourism places</string>
     <string name="tour">Tour</string>
+    <string name="event">Event</string>
+    <string name="weather">Weather</string>
     <string name="join_event">Join Event</string>
     <string name="leave_event">Leave Event</string>
 </resources>
